@startuml editeur-classes
!pragma layout smetana
skinparam classAttributeIconSize 0
skinparam classFontSize 11
skinparam defaultFontName Sans
skinparam linetype ortho
hide empty members

package "editeur" {
  class EditeurTexte <<StackPane>> {
    -deriere: EditeurTexteInvisible
    -devant: TextMultiColoriable
    +colorier(debut, fin, c: Color)
    +alignerPasDeLigne()
  }
  class EditeurTexteInvisible <<TextArea>> {
    +appliquerTheme()
  }
  abstract class TextDecoupable <<TextFlow>> {
    -morceaux: CelluleTexte
    +decoupeMorceau(debut, fin)
  }
  class TextMultiColoriable {
    +colorier(debut, fin, c: Color)
  }
  class CelluleTexte {
    -debut: int
    -fin: int
    -morceau: Text
    -suivant: CelluleTexte
  }
  class NumeroteurLigne <<VBox>>
  class BandeauErreur <<Label>>
}

package "editeur.coloration" {
  class GestionnaireColorateur {
    +gerrerAll(tokens: List<Lexem<Token>>)
    +colorierAll()
  }
  interface ColorateurToken {
    +getCouleur(): Color
    +appliqueCouleur(e: EditeurTexte)
  }
  class ColorateurUnique
  class ColorateurParenthese
  class EmpilieurParenthese {
    -parentheses: Stack
    +traiter(c: ColorateurParenthese)
  }
  class Palette {
    +estModeSombre: boolean
    +adapter(claire, sombre): Color
  }
}

package "editeur.autocompletion" {
  class AutoCompletionFormatter <<TextFormatter>>
  class AutoCompleteur
}

EditeurTexte *-- EditeurTexteInvisible : derrière (saisie)
EditeurTexte *-- TextMultiColoriable : devant (coloré)
EditeurTexte o-- BandeauErreur
TextDecoupable <|-- TextMultiColoriable
TextDecoupable *-- "*" CelluleTexte
CelluleTexte --> CelluleTexte : suivant
NumeroteurLigne ..> EditeurTexte : observe

EditeurTexteInvisible ..> Palette : couleur estompée
EditeurTexteInvisible o-- AutoCompletionFormatter
AutoCompletionFormatter *-- AutoCompleteur

GestionnaireColorateur o-- "*" ColorateurToken
GestionnaireColorateur *-- EmpilieurParenthese
GestionnaireColorateur ..> EditeurTexte : colore
ColorateurToken <|.. ColorateurUnique
ColorateurToken <|.. ColorateurParenthese
ColorateurUnique ..> Palette
ColorateurParenthese ..> EmpilieurParenthese : profondeur
ColorateurToken ..> EditeurTexte : appliqueCouleur()

@enduml
